Fix the sssd config file
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/ipsilon/templates/sssd.conf
+++ b/roles/ipsilon/templates/sssd.conf
@@ -1,9 +1,9 @@
-[domain/stg.fedoraproject.org]
+[domain/{{ env_prefix }}fedoraproject.org]
 id_provider = ipa
-dns_discovery_domain = stg.fedoraproject.org
-ipa_server = _srv_, ipa01.stg.iad2.fedoraproject.org
-ipa_domain = stg.fedoraproject.org
-ipa_hostname = ipsilon01.stg.iad2.fedoraproject.org
+dns_discovery_domain = {{ env_prefix }}fedoraproject.org
+ipa_server = _srv_, {{ ipa_server }}
+ipa_domain = {{ env_prefix }}fedoraproject.org
+ipa_hostname = {{ ansible_fqdn }}
 auth_provider = ipa
 chpass_provider = ipa
 access_provider = ipa
@@ -20,7 +20,7 @@ ldap_user_extra_attrs = mail, street, locality, st, postalCode, telephoneNumber,
 
 [sssd]
 services = nss, pam, ssh, sudo, ifp
-domains = stg.fedoraproject.org
+domains = {{ env_prefix }}fedoraproject.org
 
 [nss]
 homedir_substring = /home
