Fix the mediawiki auth plugin
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/mediawiki/tasks/main.yml
+++ b/roles/mediawiki/tasks/main.yml
@@ -214,9 +214,8 @@
   - mediawiki
 
 - name: Patch OpenIDConnect plugin to require CLA+1
-  when: env == "production"
-  copy: src=OpenIDConnect.class.php
-        dest=/srv/web/fp-wiki/extensions/OpenIDConnect/OpenIDConnect.class.php
+  copy: src=OpenIDConnect.php
+        dest=/srv/web/fp-wiki/extensions/OpenIDConnect/src/OpenIDConnect.php
   tags:
   - mediawiki
 
