--- a/roles/openshift-apps/fas/templates/buildconfig-fas.yml
+++ b/roles/openshift-apps/fas/templates/buildconfig-fas.yml
@@ -10,10 +10,10 @@ spec:
     dockerfile: |-
       FROM registry.access.redhat.com/rhel6
       RUN curl -o /etc/yum.repos.d/rhel6.repo https://infrastructure.fedoraproject.org/infra/ansible/files/common/rhel6.repo && \
-          curl -o /etc/yum.repos.d/epel6.repo https://infrastructure.fedoraproject.org/infra/ansible/files/common/epel6.repo && \
 {% if env == "staging" %}
           curl -o /etc/yum.repos.d/infra-tags-stg.repo https://infrastructure.fedoraproject.org/infra/ansible/files/common/rhel-infra-tags-stg.repo && \
 {% endif %}
+          curl -o /etc/yum.repos.d/epel6.repo https://infrastructure.fedoraproject.org/infra/ansible/files/common/epel6.repo
 
       RUN yum install -y \
           fas \
