Add a --no-ssh to the ipa-client-install so that sshconfigs on clients are not altered.
Signed-off-by: Stephen Smoogen <smooge@smoogespace.com>

--- a/roles/ipa/client/tasks/main.yml
+++ b/roles/ipa/client/tasks/main.yml
@@ -32,6 +32,7 @@
          -p admin -w {{ ipa_admin_password }}
          -U -N --force-join
          --mkhomedir
+         --no-ssh
     creates: /etc/ipa/default.conf
   notify: clean sss caches
   tags:
