--- a/roles/people/tasks/main.yml
+++ b/roles/people/tasks/main.yml
@@ -282,3 +282,24 @@
   copy: src=check-broken-planet.cron dest=/etc/cron.d/check-broken-planet.cron mode=644
   tags:
   - people
+
+- name: copy SSSd configuration
+  template:
+    src: sssd.conf
+    dest: /etc/sssd/sssd.conf
+    owner: root
+    group: root
+    mode: 0600
+  tags:
+  - ipsilon
+  - config
+  notify:
+  - restart sssd
+
+- name: mount tmp on tmpfs
+  mount: name=/var/lib/sss/db/ src=tmpfs fstype=tmpfs state=mounted opts=defaults,size=2G,mode=0700,rootcontext=system_u:object_r:sssd_var_lib_t:s0
+  tags:
+  - ipsilon
+  - config
+  notify:
+  - restart sssd
