Use our custom info plugin
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/ipsilon/templates/configuration.conf
+++ b/roles/ipsilon/templates/configuration.conf
@@ -2,8 +2,8 @@
 global enabled=gssapi,form
 
 [info_config]
-sssd preconfigured = True
-global enabled = sssd
+fas preconfigured = True
+global enabled = fas
 
 [authz_config]
 global enabled=allow
