bastion: add fasjon role to bastion
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/bastion.yml
+++ b/playbooks/groups/bastion.yml
@@ -21,6 +21,7 @@
   - openvpn/server
   - packager_alias
   - opendkim
+  - fasjson
 
   pre_tasks:
   - import_tasks: "{{ tasks_path }}/yumrepos.yml"
