nagios_client: the check_systemd_units is in scripts, not script
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/nagios_client/tasks/main.yml
+++ b/roles/nagios_client/tasks/main.yml
@@ -55,7 +55,7 @@
   - nagios_client
 
 - name: install nrpe check for systemd unit
-  copy: src="script/{{ item }}" dest="{{ libdir }}/nagios/plugins/{{ item }}" mode=0775 owner=nagios group=nagios
+  copy: src="scripts/{{ item }}" dest="{{ libdir }}/nagios/plugins/{{ item }}" mode=0775 owner=nagios group=nagios
   with_items:
     - check_systemd_units
   when: inventory_hostname.startswith('pagure')
