cleanup: use iad2 composer

--- a/playbooks/groups/releng-compose.yml
+++ b/playbooks/groups/releng-compose.yml
@@ -30,7 +30,7 @@
   - sudo
   - role: keytab/service
     service: compose
-    host: "composer.stg.iad2.fedoraproject.org"
+    host: "compose-x86-01.stg.iad2.fedoraproject.org"
     when: env == "staging"
   - role: keytab/service
     service: compose
