toddlers: add the openshift/ipa-client role to handle kerberos
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/openshift-apps/toddlers.yml
+++ b/playbooks/openshift-apps/toddlers.yml
@@ -52,6 +52,9 @@
       warning: 10
       critical: 100
 
+  - role: openshift/ipa-client
+    app: toddlers
+
   - role: openshift/object
     app: toddlers
     template: buildconfig.yml
