--- a/roles/openshift-apps/toddlers/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/toddlers/templates/deploymentconfig.yml
@@ -40,6 +40,12 @@ spec:
         - name: fedora-messaging-cert-volume
           mountPath: /etc/pki/rabbitmq/cert
           readOnly: true
+        - name: ipa-config-volume
+          mountPath: /etc/ipa
+          readOnly: true
+        - name: keytab-volume
+          mountPath: /etc/keytabs
+          readOnly: true
       volumes:
       - name: toddlers-secret-volume
         secret:
@@ -53,6 +59,12 @@ spec:
       - name: fedora-messaging-cert-volume
         secret:
           secretName: toddlers-fedora-messaging-crt
+      - name: ipa-config-volume
+        configMap:
+          name: ipa-client-config
+      - name: keytab-volume
+        secret:
+          secretName: toddlers-keytab
 
   triggers:
   - type: ConfigChange
