--- a/playbooks/openshift-apps/toddlers.yml
+++ b/playbooks/openshift-apps/toddlers.yml
@@ -56,6 +56,7 @@
     app: toddlers
     key: service.keytab
     secret_name: toddlers-keytab
+    service: toddlers
 
   - role: openshift/ipa-client
     app: toddlers
