toddlers: specify the KRB5_CONFIG environment variable
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/toddlers/templates/deploymentconfig.yml
@@ -26,6 +26,8 @@ spec:
         env:
           - name: PYTHONPATH
             value: "/code"
+          - name: KRB5_CONFIG
+            value: /etc/ipa/krb5.conf
         resources: {}
         volumeMounts:
         - name: toddlers-secret-volume
