Add a deep clean which restarts sssd and then cleans the cache in case of major config file changes

--- a/roles/ipa/client/handlers/main.yml
+++ b/roles/ipa/client/handlers/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: clean sss caches
   command: sss_cache -E
+- name: deep clean sss caches
+  shell: systemctl restart sssd && sss_cache -E
