--- a/roles/ipa/client/handlers/main.yml
+++ b/roles/ipa/client/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: clean sss caches
   command: sss_cache -E
-- name: deep clean sss caches
-  shell: systemctl restart sssd && sss_cache -E
+
+- name: restart sssd
+  shell: systemctl restart sssd
