people: use fedora-contributor instead of cla_done
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/people/tasks/main.yml
+++ b/roles/people/tasks/main.yml
@@ -229,7 +229,7 @@
   - peoplequotas
 
 - name: create repos directory
-  file: path=/project/repos state=directory owner=root group=cla_done mode=0775
+  file: path=/project/repos state=directory owner=root group=fedora-contributor mode=0775
   tags:
   - people
 
