fedocal: rename the cron job
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/fedocal/files/cron.yml
+++ b/roles/openshift-apps/fedocal/files/cron.yml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: cron
+  name: fedocal-cron
 spec:
   concurrencyPolicy: Forbid
   schedule: "*/30 * * * *"
