--- a/roles/openshift-apps/toddlers/templates/buildconfig.yml
+++ b/roles/openshift-apps/toddlers/templates/buildconfig.yml
@@ -14,7 +14,7 @@ spec:
     git:
       uri: https://pagure.io/fedora-infra/toddlers.git
 {% if env == 'staging' %}
-      ref: "staging"
+      ref: "debug"
 {% else %}
       ref: "production"
 {% endif %}
