toddlers: toddlers is not fedocal, undo and redo right
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/buildconfig.yml
+++ b/roles/openshift-apps/toddlers/templates/buildconfig.yml
@@ -14,7 +14,7 @@ spec:
     git:
       uri: https://pagure.io/fedora-infra/toddlers.git
 {% if env == 'staging' %}
-      ref: "debug"
+      ref: "staging"
 {% else %}
       ref: "production"
 {% endif %}
