fedocal: we said build from the debug branch...
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/fedocal/templates/buildconfig.yml
+++ b/roles/openshift-apps/fedocal/templates/buildconfig.yml
@@ -14,7 +14,7 @@ spec:
     git:
       uri: https://pagure.io/fedocal.git
 {% if env == 'staging' %}
-      ref: "staging"
+      ref: "debug"
 {% else %}
       ref: "production"
 {% endif %}
