roll back election changes to see if we broke login

--- a/roles/openshift-apps/elections/templates/fedora-elections.cfg
+++ b/roles/openshift-apps/elections/templates/fedora-elections.cfg
@@ -26,8 +26,8 @@ OIDC_CLIENT_SECRETS = '/opt/app-root/secret/client_secrets.json'
 FASJSON = True
 FAS_BASE_URL = 'https://fasjson.stg.fedoraproject.org/'
 {% else %}
-FASJSON = True
-FAS_BASE_URL = 'https://fasjson.fedoraproject.org/'
+#FASJSON = True
+FAS_BASE_URL = 'https://admin.fedoraproject.org/accounts/'
 FAS_USERNAME = '{{ fedorathirdpartyUser }}'
 FAS_PASSWORD = '{{ fedorathirdpartyPassword }}'
 ## This should be ``True`` but should be changed to ``False`` if the FAS server
