distgit/pagure: disable the hook to block un-signed commits
Relates to https://pagure.io/fedora-infrastructure/issue/9793

Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -63,7 +63,10 @@ ALWAYS_FEDMSG_ON_COMMITS = True
 FEDMSG_NOTIFICATIONS = False
 FEDORA_MESSAGING_NOTIFICATIONS = True
 
-DISABLED_PLUGINS = ['IRC', 'Pagure tickets', 'Read the Doc', 'Fedmsg']
+DISABLED_PLUGINS = [
+    "IRC", "Pagure tickets", "Read the Doc", "Fedmsg",
+    "Block Un-Signed commits",
+]
 
 GITOLITE_BACKEND = 'distgit'
 
