--- a/roles/openshift-apps/fedocal/templates/fedocal.cfg
+++ b/roles/openshift-apps/fedocal/templates/fedocal.cfg
@@ -22,7 +22,11 @@ ADMIN_GROUP='sysadmin-calendar'
 ### The address of the SMTP server used to send the reminders emails
 ### via the cron job.
 ### Default: 'localhost'
+{% if env == 'staging' %}
+SMTP_SERVER='localhost'
+{% else %}
 SMTP_SERVER='bastion.fedoraproject.org'
+{% endif %}
 
 ### The cron job can be set with any frequency but fedocal_cron needs
 ### this information to accurately retrieve the meetings to remind and
