--- a/roles/openshift-apps/debuginfod/templates/storage.yml
+++ b/roles/openshift-apps/debuginfod/templates/storage.yml
@@ -19,7 +19,7 @@ metadata:
 spec:
   storageClassName: ""
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 300Gi
