flatpak-indexer: Fix the mount path for the redis data volume
Redis is configured to store its data in /data, so mount the persistent
volume there rather than on /var/lib/redis/data.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/flatpak-indexer/templates/deploymentconfig.yml
@@ -207,7 +207,7 @@ spec:
           timeoutSeconds: 1
         resources: {}
         volumeMounts:
-        - mountPath: /var/lib/redis/data
+        - mountPath: /data
           name: redis-data-volume
       dnsPolicy: ClusterFirst
       restartPolicy: Always
