debuginfod: fix route->service port: 8002

--- a/playbooks/openshift-apps/debuginfod.yml
+++ b/playbooks/openshift-apps/debuginfod.yml
@@ -43,7 +43,7 @@
     app: debuginfod
     routename: debuginfod
     host: "debuginfod{{ env_suffix }}.fedoraproject.org"
-    serviceport: 8002-tcp
+    serviceport: 8002
     servicename: debuginfod
 
   - role: openshift/start-build
