debuginfod: correct sqlite3->sqlite rpm package name

--- a/roles/openshift-apps/debuginfod/files/buildconfig.yml
+++ b/roles/openshift-apps/debuginfod/files/buildconfig.yml
@@ -17,7 +17,7 @@ items:
           vendor="Fedora Infrastructure"
         WORKDIR /
         EXPOSE 8002
-        RUN dnf -y install bsdtar elfutils-debuginfod sqlite3 procps-ng rsync tar && \
+        RUN dnf -y install bsdtar elfutils-debuginfod sqlite procps-ng rsync tar && \
             dnf autoremove -y
       type: Dockerfile
     strategy:
