--- a/roles/openshift-apps/oraculum/templates/buildconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/buildconfig.yml
@@ -14,7 +14,11 @@ spec:
     type: Git
     git:
       uri: https://pagure.io/fedora-qa/oraculum
+{% if env == 'staging' %}
+      ref: "oidc_improvements"
+{% else %}
       ref: "master"
+{% endif %}
   strategy:
     type: Source
     sourceStrategy:
