yumrepos: be RHEL7/CentOS7 compatible
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/tasks/yumrepos.yml
+++ b/tasks/yumrepos.yml
@@ -83,7 +83,7 @@
   - yumrepos
 
 - name: epel release on el systems (aws)
-  dnf:
+  package:
     name: 'epel-release'
     state: present
   when: ((ansible_distribution == 'RedHat' or ansible_distribution == 'CentOS') and use_default_epel) and datacenter == "aws"
