--- a/playbooks/hosts/iddev.fedorainfracloud.org.yml
+++ b/playbooks/hosts/iddev.fedorainfracloud.org.yml
@@ -21,6 +21,12 @@
   - import_tasks: "{{ tasks_path }}/cloud_setup_basic.yml"
   - name: set hostname (required by some services, at least postfix need it)
     hostname: name="{{inventory_hostname}}"
+  - name: Letsencrypt for iddev.fedorainfracloud.org
+    include_role: name=letsencrypt
+    vars:
+      site_name: iddev.fedorainfracloud.org
+    tags:
+    - letsencrypt
 
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
