iddev: more fixes for the echo command
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/hosts/iddev.fedorainfracloud.org.yml
+++ b/playbooks/hosts/iddev.fedorainfracloud.org.yml
@@ -27,8 +27,7 @@
         ServerName iddev.fedorainfracloud.org
         ProxyPass "/.well-known/acme-challenge" "http://certgetter01/.well-known/acme-challenge"
         Redirect permanent / https://iddev.fedorainfracloud.org
-     </VirtualHost>
-     ' > /etc/httpd/conf.d/proxy_letsencrypt.conf
+     </VirtualHost>' > /etc/httpd/conf.d/proxy_letsencrypt.conf
   - name: reload apache
     ansible.builtin.service:
       name: httpd
