iddev: try proxying to cergetter01 over https
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/hosts/iddev.fedorainfracloud.org.yml
+++ b/playbooks/hosts/iddev.fedorainfracloud.org.yml
@@ -25,7 +25,7 @@
     shell: |
       echo '<VirtualHost *:80>
         ServerName iddev.fedorainfracloud.org
-        ProxyPass "/.well-known/acme-challenge" "http://certgetter01/.well-known/acme-challenge"
+        ProxyPass "/.well-known/acme-challenge" "https://certgetter01/.well-known/acme-challenge"
         Redirect permanent / https://iddev.fedorainfracloud.org
       </VirtualHost>' > /etc/httpd/conf.d/proxy_letsencrypt.conf
   - name: reload apache
