--- a/roles/openshift-apps/debuginfod/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/debuginfod/templates/deploymentconfig.yml
@@ -36,7 +36,7 @@ spec:
                   # exclude signed etc. variants, just want original RPMs
                   "-X", "/data/",
                   "-R", "/mnt/koji/packages",
-                  "-I", "\\.fc(32|33|34|35)\\..*\\.rpm$"]
+                  "-I", "\\.(module_f|fc)(32|33|34|35)[.+].*\\.rpm$"]
         ports:
         - containerPort: 8002
         resources:
