--- a/playbooks/groups/dns.yml
+++ b/playbooks/groups/dns.yml
@@ -18,7 +18,7 @@
   - rkhunter
   - nagios_client
   - { role: openvpn/client,
-      when: datacenter != "rdu" and datacenter != 'iad2' }
+      when: datacenter != 'iad2' }
   - ipa/client
   - collectd/base
   - collectd/bind
