copr-fe: typo in PG history file create

--- a/roles/copr/frontend-cloud/tasks/psql_setup.yml
+++ b/roles/copr/frontend-cloud/tasks/psql_setup.yml
@@ -138,5 +138,5 @@
 
 - name: install pghistory file
   file: path="{{ copr_fe_homedir }}/.psql_history" state=touch
-        owner=copr-fe group=ćopr-fe mode=0600
+        owner=copr-fe group=copr-fe mode=0600
   when: not history_file.stat.exists
