--- a/roles/copr/frontend-cloud/tasks/main.yml
+++ b/roles/copr/frontend-cloud/tasks/main.yml
@@ -158,9 +158,9 @@
   - ansible_facts.packages['copr-frontend'][0].version is version('1.156', '>=')
   - not services_disabled|bool
 
-- name: install bashrc file to ease some admin tasks
+- name: install bash_profile file to ease some admin tasks
   copy:
     content: |
       export PGUSER=copr-fe
       export PGDATABASE=coprdb
-    dest: "{{ copr_fe_homedir }}/.bashrc"
+    dest: "{{ copr_fe_homedir }}/.bash_profile"
