--- a/roles/distgit/tasks/main.yml
+++ b/roles/distgit/tasks/main.yml
@@ -106,6 +106,18 @@
   tags:
   - distgit
 
+# -- SSH
+# We use a wrapper to let packager ssh in while restricting the command they can
+# do, this installs that wrapper (which is otherwise configured in sshd_config)
+
+- name: install the ssh_wrapper wrapper script
+  copy: src=ssh_wrapper dest=/usr/local/bin/ssh_wrapper mode=0755
+  tags:
+    - config
+    - distgit
+    - ssh
+    - basessh
+
 # -- Dist Git --------------------------------------------
 # This is the Git setup itself: group, root directory, scripts,...
 - name: install dist-git
