openshift: update egressPolicy for iad2

--- a/roles/openshift/project/defaults/main.yml
+++ b/roles/openshift/project/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 allow_fas_db: false
-allow_phx2: true
+allow_iad2: true
 
 egress_policy_template: "{{roles_path}}/openshift/project/templates/egresspolicy.yml"
