--- a/roles/openshift/project/templates/egresspolicy.yml
+++ b/roles/openshift/project/templates/egresspolicy.yml
@@ -9,14 +9,14 @@ spec:
 {% if env == "staging" %}
   - type: Deny
     to:
-      cidrSelector: "10.5.128.96/32"
+      cidrSelector: "10.3.166.34/32"
 {% else %}
   - type: Deny
     to:
-      cidrSelector: "10.5.126.99/32"
+      cidrSelector: "10.3.163.42/32"
 {% endif %}
 {% endif %}
-{% if not allow_phx2 %}
+{% if not allow_iad2 %}
   - type: Deny
     to:
       cidrSelector: "10.0.0.0/8"
