--- a/roles/ipa/client/tasks/vpn.yml
+++ b/roles/ipa/client/tasks/vpn.yml
@@ -1,5 +1,6 @@
 ---
 - name: Install /etc/hosts for VPN clients
+  when: "(vpn | default(false)) and (datacenter | default('iad2')) != 'iad2'"
   include_role:
     name: hosts
     apply:
