--- a/roles/mirrormanager/frontend2/templates/mirrormanager2.cfg
+++ b/roles/mirrormanager/frontend2/templates/mirrormanager2.cfg
@@ -65,7 +65,7 @@ MM_AUTHENTICATION = 'fas'
 
 # If the authentication method is `fas`, groups in which should be the user
 # to be recognized as an admin.
-ADMIN_GROUP = ('sysadmin-main', 'sysadmin-web')
+ADMIN_GROUP = ['sysadmin-main', 'sysadmin-web']
 
 # Email of the admin to which send notification or error
 ADMIN_EMAIL = ['admin@fedoraproject.org', 'adrian@fedoraproject.org']
