releng-compose: install fedora-repo-zdicts for zchunk repodata
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/releng/tasks/main.yml
+++ b/roles/releng/tasks/main.yml
@@ -132,6 +132,7 @@
     - python3-gobject
     - fedora-messaging # needed by pungi to emit fedora-messages.
     - python3-bugzilla # needed by ftbfs scrips/cron.
+    - fedora-repos-zdicts # needed for pungi to make zchunk repodata
   tags:
   - releng
 
