people: add python36 jinja2 for make-people-page script
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/people/tasks/main.yml
+++ b/roles/people/tasks/main.yml
@@ -14,9 +14,9 @@
   - nano
   - pyliblzma
   - libxml2-python
-  - python-jinja2
   - tree            # requested in ticket 5148
   - mod_ssl
+  - python36-jinja2 # needed now for make-people-page.py
   tags:
   - packages
   - people
