--- a/roles/hosts/tasks/main.yml
+++ b/roles/hosts/tasks/main.yml
@@ -9,7 +9,7 @@
 # This will move a /etc/hosts in place if it's setup in files for that host/domain
 # Note that if it's not set it will just skip this play and do nothing.
 #
-- name: setup /etc/hosts for some clients
+- name: setup /etc/hosts for some clients that are not on the vpn or are and in iad2
   copy: src={{ item }} dest=/etc/hosts
   with_first_found:
   - "{{ inventory_hostname }}-hosts"
@@ -18,12 +18,12 @@
   - "{{ ansible_domain }}-hosts"
   - "{{ datacenter }}-hosts"
   - "{{ hosts_base | default('base') }}"
-  when: not vpn
+  when: not vpn or ( vpn and datacenter == 'iad2' )
   tags:
   - config
   - hosts
 
-- name: setup /etc/hosts for some clients
+- name: setup /etc/hosts for some clients on the vpn, that are not in iad2
   copy: src={{ item }} dest=/etc/hosts
   with_first_found:
   - "{{ inventory_hostname }}-hosts"
@@ -32,7 +32,7 @@
   - "{{ ansible_domain }}-hosts"
   - "{{ datacenter }}-hosts"
   - "{{ hosts_base | default('vpn') }}"
-  when: vpn
+  when: vpn and datacenter != 'iad2'
   tags:
   - config
   - hosts
