debuginfod: add both stg and prod debuginfod vms
We are moving this to vm's as the nfs storage on openshift isn't up to
the i/o that this application needs.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -751,9 +751,8 @@
   - role: httpd/reverseproxy
     website: debuginfod.fedoraproject.org
     destname: debuginfod
-    balancer_name: app-os
-    targettype: openshift
-    keephost: true
-    when: env == "staging"
+    remotepath: /
+    localpath: /
+    proxyurl: http://debuginfod01
     tags: debuginfod
 
