debuginfod: set mount_stg true on nfs mount
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/debuginfod.yml
+++ b/playbooks/groups/debuginfod.yml
@@ -22,6 +22,7 @@
   - collectd/base
   
   - role: nfs/client
+    mount_stg: true
     mnt_dir: '/mnt/fedora_koji_prod'
     nfs_src_dir: "fedora_koji"
 
