--- a/playbooks/groups/debuginfod.yml
+++ b/playbooks/groups/debuginfod.yml
@@ -28,6 +28,18 @@
 
   tasks:
   - import_tasks: "{{ tasks_path }}/motd.yml"
+    
+  - name: install debuginfod
+    package: name=elfutils-debuginfod state=present
 
+  - name: install debuginfod configuration
+    copy: src="{{ files }}/debuginfod/sysconfig.debuginfod" dest=/etc/sysconfig/debuginfod owner=root group=root mode=644
+
+  - name: ensure debuginfod is enabled and started
+    service:
+      name: debuginfod
+      state: started
+      enabled: yes
+    
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
