distgit: adjust the way we override the branches when querying PDC
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -87,7 +87,7 @@ UNSPECIFIED_BLACKLIST_RES = ['refs/heads/main',
                              'refs/heads/epel[0-9]+',
                              'refs/heads/el[0-9]+',
                              'refs/heads/olpc[0-9]+']
-PDC_BRANCH_OVERRIDES = {"refs/heads/main": "refs/heads/rawhide"}
+PDC_BRANCH_OVERRIDES = {"rpms": {"refs/heads/main": "refs/heads/rawhide"}}
 
 
 ALLOW_HTTP_PUSH = True
