Change manual/update-aliases.yml playbook to use fasjson role, not fas_client

--- a/playbooks/manual/update-aliases.yml
+++ b/playbooks/manual/update-aliases.yml
@@ -1,4 +1,4 @@
-- name: run fas_client playbook on bastion for alias changes
+- name: run fasjson playbook on bastion for alias changes
   hosts: bastion
   user: root
   gather_facts: True
@@ -9,4 +9,4 @@
    - /srv/web/infra/ansible/vars/{{ ansible_distribution }}.yml
 
   roles:
-  - { role: fas_client, when: env != "staging" }
+  - { role: fasjson, when: env != "staging" }
