This will allow for X forwarded to be set for hosts which need it. [Currently only debuginfod]

--- a/roles/httpd/website/templates/website.conf
+++ b/roles/httpd/website/templates/website.conf
@@ -6,7 +6,11 @@
   ServerAdmin {{ server_admin }}
   TraceEnable Off
 
+{% if x_forward %}
+#  RequestHeader unset X-Forwarded-For
+{% else %}
   RequestHeader unset X-Forwarded-For
+{% endif %}
 
 {% if gzip %}
   SetOutputFilter DEFLATE
@@ -46,7 +50,11 @@
 {% endif %}
   ServerAdmin {{ server_admin }}
 
+{% if x_forward %}
+#  RequestHeader unset X-Forwarded-For
+{% else %}
   RequestHeader unset X-Forwarded-For
+{% endif %}
 
 {% if ansible_distribution == 'Fedora' and use_h2 %}
   Protocols h2 http/1.1
