--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -973,6 +973,7 @@
     site_name: debuginfod.fedoraproject.org
     sslonly: true
     server_aliases: [debuginfod.stg.fedoraproject.org]
+    x_forward: true
     cert_name: "{{wildcard_cert_name}}"
     tags: debuginfod
 
