--- a/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
+++ b/roles/openshift-apps/oraculum/templates/deploymentconfig.yml
@@ -77,6 +77,8 @@ spec:
 {% else %}
           value: "bastion.iad2.fedoraproject.org;;;watchdog@packager-dashboard.fedoraproject.org;"
 {% endif %}
+        - name: BZ_API_KEY
+          value: "{{ oraculum_bz_api_key }}"
         volumeMounts:
         - name: oraculum-secret-volume
           mountPath: /opt/app-root/secret/
@@ -176,6 +178,8 @@ spec:
 {% else %}
           value: "bastion.iad2.fedoraproject.org;;;watchdog@packager-dashboard.fedoraproject.org;"
 {% endif %}
+        - name: BZ_API_KEY
+          value: "{{ oraculum_bz_api_key }}"
         volumeMounts:
         - name: oraculum-secret-volume
           mountPath: /opt/app-root/secret/
@@ -259,6 +263,8 @@ spec:
 {% else %}
           value: "bastion.iad2.fedoraproject.org;;;watchdog@packager-dashboard.fedoraproject.org;"
 {% endif %}
+        - name: BZ_API_KEY
+          value: "{{ oraculum_bz_api_key }}"
         volumeMounts:
         - name: oraculum-secret-volume
           mountPath: /opt/app-root/secret/
@@ -344,6 +350,8 @@ spec:
 {% else %}
           value: "bastion.iad2.fedoraproject.org;;;watchdog@packager-dashboard.fedoraproject.org;"
 {% endif %}
+        - name: BZ_API_KEY
+          value: "{{ oraculum_bz_api_key }}"
         volumeMounts:
         - name: oraculum-secret-volume
           mountPath: /opt/app-root/secret/
