Change named settings for tcp connections
In order to try and fix the number of TCP connections allowed to get
to the dns servers by increasing from the default 100 to 1000. This
will hopefully help fix the issue in
https://pagure.io/fedora-infrastructure/issue/9850 where the name
servers are not able to answer TCP connections after a while.

Signed-off-by: Stephen Smoogen <smooge@smoogespace.com>

--- a/roles/dns/files/named.conf
+++ b/roles/dns/files/named.conf
@@ -37,9 +37,11 @@ options {
         pid-file "/var/run/named/named.pid";
         statistics-file "/var/log/named.stats";
         provide-ixfr no;
+	tcp-clients 1000;
 
         version "cowbell++";
-        listen-on port 53 {
+
+	listen-on port 53 {
                 any;
         };
         listen-on-v6 port 53 {
