--- a/playbooks/groups/releng-compose.yml
+++ b/playbooks/groups/releng-compose.yml
@@ -74,6 +74,11 @@
     mnt_dir: '/pub'
     nfs_src_dir: 'fedora_ftp/fedora.redhat.com/pub'
     when: "'releng_compose' in group_names"
+
+  - role: nfs/client
+    mnt_dir: '/srv/fedora_ftp_archive'
+    nfs_src_dir: 'fedora_ftp_archive'
+    when: inventory_hostname.startswith('compose-rawhide')
 #
 # mount archive volumes on composer so we can run the archiving script there.
 #
