proxies/debuginfod: allow proxyopts
debuginfod can take O(60s) to run certain webapi queries, so the httpd
mod_proxy default timeouts are too short.  Introduce an ansible
variable "proxyopts", expanded into the httpd ProxyPass and
ProxyPassReverse configuration lines.  Default to "", but set it
with pretty generous limits for debuginfod only.

--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -754,5 +754,6 @@
     remotepath: /
     localpath: /
     proxyurl: http://debuginfod01:8002
+    proxyopts: "connectiontimeout=600 timeout=600 keepalive=on"
     tags: debuginfod
 
