debuginfod proxies: enable gzip
elf/dwarf/source-code data from debuginfod is highly compressible.
Let's trade proxy CPU for reduce network traffic.

--- a/playbooks/include/proxies-websites.yml
+++ b/playbooks/include/proxies-websites.yml
@@ -975,6 +975,7 @@
     server_aliases: [debuginfod.stg.fedoraproject.org]
     x_forward: true
     cert_name: "{{wildcard_cert_name}}"
+    gzip: true
     tags: debuginfod
 
   - role: httpd/website
