Add in a 12x7 versus 16x7 and make some timeszones friendlier
Signed-off-by: Stephen Smoogen <smooge@smoogespace.com>

--- a/roles/nagios_server/files/nagios/contactgroups/fedora-sysadmin-pager.cfg
+++ b/roles/nagios_server/files/nagios/contactgroups/fedora-sysadmin-pager.cfg
@@ -1,11 +1,11 @@
 define contactgroup{
     contactgroup_name       fedora-sysadmin-pager
     alias                   Fedora Sysadmin Pager Contacts
-    members 		    smoogep,kevinp,codeblockp
+    members 		    smooge,kevinp,codeblockp
 }
 
 define contactgroup{
     contactgroup_name       fedora-sysadmin-emergency
     alias                   Fedora Sysadmin Pager Contacts
-    members 		    smooge-emergency,kevin-emergency,codeblock-emergency
+    members 		    smooge,kevin-emergency,codeblock-emergency
 }
