--- a/roles/nagios_server/files/nagios/contacts/codeblock.cfg
+++ b/roles/nagios_server/files/nagios/contacts/codeblock.cfg
@@ -26,8 +26,8 @@ define contact{
 define contact{
     contact_name        codeblockp
     alias           Rick Elrod
-    service_notification_period     16x7
-    host_notification_period        16x7
+    service_notification_period     12x7-USET
+    host_notification_period        12x7-USET
     service_notification_options    w,u,c,r
     host_notification_options       d,u,r
     service_notification_commands   notify-by-epager
