--- a/roles/nagios_server/files/nagios/configs/timeperiods.cfg
+++ b/roles/nagios_server/files/nagios/configs/timeperiods.cfg
@@ -36,16 +36,41 @@ define timeperiod{
 }
 
 define timeperiod{
-        timeperiod_name 16x7
-        alias           15 Hours a day, 7 days a week
-        sunday          00:00-04:00,13:00-24:00
-        monday          00:00-04:00,13:00-24:00
-        tuesday         00:00-04:00,13:00-24:00
-        wednesday       00:00-04:00,13:00-24:00
-        thursday        00:00-04:00,13:00-24:00
-        friday          00:00-04:00,13:00-24:00
-        saturday        00:00-04:00,13:00-24:00
+        timeperiod_name 12x7-GMT
+        alias           12 Hours a day, 7 days a week
+        sunday          08:00-20:00
+        monday          08:00-20:00
+        tuesday         08:00-20:00
+        wednesday       08:00-20:00
+        thursday        08:00-20:00
+        friday          08:00-20:00
+        saturday        08:00-20:00
         }
+
+define timeperiod{
+        timeperiod_name 12x7-USET
+        alias           12 Hours a day, 7 days a week
+        sunday          12:00-24:00
+        monday          12:00-24:00
+        tuesday         12:00-24:00
+        wednesday       12:00-24:00
+        thursday        12:00-24:00
+        friday          12:00-24:00
+        saturday        12:00-24:00
+        }
+
+define timeperiod{
+        timeperiod_name 12x7-USPT
+        alias           12 Hours a day, 7 days a week
+        sunday          00:00-03:00,15:00-24:00
+        monday          00:00-03:00,15:00-24:00
+        tuesday         00:00-03:00,15:00-24:00
+        wednesday       00:00-03:00,15:00-24:00
+        thursday        00:00-03:00,15:00-24:00
+        friday          00:00-03:00,15:00-24:00
+        saturday        00:00-03:00,15:00-24:00
+        }
+
 
 define timeperiod{
         timeperiod_name 16x7-AU
