Update kevins config so nagios will load since 16x7 no longer exists
Signed-off-by: Stephen Smoogen <smooge@smoogespace.com>

--- a/roles/nagios_server/files/nagios/contacts/kevin.cfg
+++ b/roles/nagios_server/files/nagios/contacts/kevin.cfg
@@ -1,8 +1,8 @@
 define contact{
 	contact_name		kevin
 	alias			Kevin Fenzi
-	service_notification_period     24x7
-	host_notification_period        24x7
+	service_notification_period     none
+	host_notification_period        none
 	service_notification_options    w,u,c,r
 	host_notification_options       d,u,r
 	service_notification_commands   notify-by-email
@@ -25,8 +25,8 @@ define contact{
 define contact{
 	contact_name		kevinp
 	alias			Kevin Fenzi
-	service_notification_period     16x7
-	host_notification_period        16x7
+	service_notification_period     12x7-USPT
+	host_notification_period        12x7-USPT
 	service_notification_options    w,u,c,r
 	host_notification_options       d,u,r
 	service_notification_commands   notify-by-epager
