--- a/roles/nagios_server/files/nagios/services/templates.cfg
+++ b/roles/nagios_server/files/nagios/services/templates.cfg
@@ -109,9 +109,9 @@ define service {
   max_check_attempts    3
   check_interval 480
   retry_interval  5
-  check_period          16x7
+  check_period          12x7-USET
   notification_interval 490
-  notification_period   16x7
+  notification_period   12x7-USET
   notification_options  w,u,c,r
   contact_groups        fedora-sysadmin-ircbot
 
