debuginfod proxy: fix ProxyPassReverse typo (no proxyopts there)

--- a/roles/httpd/reverseproxy/templates/reversepassproxy.conf
+++ b/roles/httpd/reverseproxy/templates/reversepassproxy.conf
@@ -65,5 +65,5 @@ ProxyPass {{ localpath }} "balancer://{{balancer_name}}{{remotepath}}"
 ProxyPassReverse {{ localpath }} "balancer://{{balancer_name}}{{remotepath}}"
 {% else %}
 ProxyPass {{ localpath }} {{ proxyurl }}{{remotepath}} {{ proxyopts }}
-ProxyPassReverse {{ localpath }} {{ proxyurl }}{{remotepath}} {{ proxyopts }}
+ProxyPassReverse {{ localpath }} {{ proxyurl }}{{remotepath}}
 {% endif %}
