proxies: redirect apps.fp.o/calendar to calendar.fp.o in openshift
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -112,6 +112,12 @@
     target: https://elections.fedoraproject.org/
 
   - role: httpd/redirectmatch
+    shortname: calendar
+    website: apps.fedoraproject.org
+    regex: /calendar
+    target: https://calendar.fedoraproject.org/
+
+  - role: httpd/redirectmatch
     shortname: mailman
     website: admin.fedoraproject.org
     regex: /mailman/(.*)$
